# fuzzycomp

./: .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md
src/: compare.rs  lib.rs
