[package]
name = "fuzzycomp"
version = "0.4.0"
authors = ["Jurij Robba <jurij.robba@vernocte.org>"]
edition = "2018"
license = "MIT"
keywords = ["fuzzy", "comp"]
categories = ["mathematics", "science"]
description = "Comparison with margins"
homepage = "https://github.com/jurij-robba/fuzzycomp"
repository = "https://github.com/jurij-robba/fuzzycomp"
readme = "README.md"

[dependencies]

assert_approx_eq = "1.1"
